# swagger.json
@@ -23,7 +23,12 @@ paths:
       operationId: "usersGET"
       produces:
       - "application/json"
-      parameters: []
+      # parameters:
+      # - name: "id"
+      #   in: "query"
+      #   description: "ID of user to retrieve"
+      #   required: true
+      #   type: "string"
       responses:
         200:
           description: "Successful operation"
@@ -139,24 +144,7 @@ definitions:
           type: "string"
       image:
         type: "string"
-    example:
-      lastName: "lastName"
-      image: "image"
-      adGUID: "adGUID"
-      displayName: "displayName"
-      employeeId: "employeeId"
-      latchInterval: 6.02745618307040320615897144307382404804229736328125
-      userDefinedFieldValues:
-      - "userDefinedFieldValues"
-      - "userDefinedFieldValues"
-      notificationEmail: "notificationEmail"
-      firstName: "firstName"
-      currentTenantId: 5.962133916683182377482808078639209270477294921875
-      profileId: 1.46581298050294517310021547018550336360931396484375
-      disable: true
-      id: 0.80082819046101150206595775671303272247314453125
-      mi: "mi"
-      currentAreaId: 5.63737665663332876420099637471139430999755859375
+      
 externalDocs:
   description: "Find out more about Swagger"
   url: "http://swagger.io"
